traycer/k8s/xenforo/xenforo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xenforo
  namespace: 7cav
spec:
  selector:
    matchLabels:
      app: xenforo
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: xenforo
      annotations:
        deploy-date: "deploy-date-value"
    spec:
      securityContext:
        runAsUser: 1003
        runAsGroup: 998
      containers:
      - name: xenforo
        image: jarvvski/xenforo-2-php-fpm:alpine
        workingDir: /var/www/html
        volumeMounts:
          - name: xenforo-volume
            mountPath: /var/www/html
      - name: xenforo-redis
        image: redis
      - name: xenforo-smtp
        image: namshi/smtp
      - name: xenforo-elastic
        image: elasticsearch:7.14.2
      volumes:
        - name: xenforo-volume
          persistentVolumeClaim:
            claimName: xenforo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: xenforo
  namespace: 7cav
spec:
  selector:
    app: xenforo
  ports:
    - name: http
      protocol: TCP
      port: 7989
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xenforo
  namespace: 7cav
  labels:
    app.kubernetes.io/name: xenforo
    app.kubernetes.io/instance: xenforo
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - "devforum.7cav.us"
      secretName: letsencrypt-xenforo
  ingressClassName: nginx
  rules:
  - host: devforum.7cav.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xenforo
            port:
              name: http
